Bug 416444 - Booking.com hotel booking missing useful information
Summary: Booking.com hotel booking missing useful information
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-19 11:03 UTC by Côme Chilliet
Modified: 2020-02-16 10:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Côme Chilliet 2020-01-19 11:03:29 UTC
SUMMARY

I used KDE itinerary to add hotel bookings to my calendar from booking.com, and I feel it is missing the following useful information:
The phone number to contact the hotel
The GPS position (especially as OSMand is really bad at understanding addresses, having the GPS position in the calendar is really useful on the phone)


STEPS TO REPRODUCE
1. Book a hotel with booking.com and ask email confirmation
2. Use KDE itinerary to add it to your calendar
3. See the missing information

OBSERVED RESULT

Times and reservation number only


EXPECTED RESULT

Phone number and GPS location as well
Comment 1 Côme Chilliet 2020-02-15 14:16:08 UTC
It appears the phone number is actually stored somewhere, because it appears in KDE itinerary on the phone if you click on the booking to get details.
Put it does not appear in the calendar event.

Is there documentation on how KDE itinerary stores hidden data in calendar event, and how that behaves with other tools? (Like, if I edit the event in korganizer, may I lose data? If I share the calendar event to someone, will he get this hidden data or not?)
Comment 2 Volker Krause 2020-02-16 09:42:05 UTC
Right, the full extracted data is stored as a custom property in the ical data. Any compliant ical application should preserve that (and e.g. KOrganizer, Nextcloud and DavDroid do). Ideally all of that should also be visible in the description field, that needs to be fixed. You are also right that this could use more documentation.
Comment 3 Volker Krause 2020-02-16 10:14:11 UTC
Git commit bc6feff87ad16116f7e069fc9e8bf6c4db13a1e8 by Volker Krause.
Committed on 16/02/2020 at 10:13.
Pushed by vkrause into branch 'master'.

Improve description for hotel booking ical events

Contains all details now, and properly handles multi-traveler bookings.

M  +1    -1    autotests/calendarhandlerdata/hotel.ics
M  +33   -7    src/calendarhandler.cpp

https://commits.kde.org/kitinerary/bc6feff87ad16116f7e069fc9e8bf6c4db13a1e8