Improve description for hotel booking ical events

Contains all details now, and properly handles multi-traveler bookings.

BUG: 416444